<resources>
    <string name="app_name">MVVM-Architecture</string>
    <string name="action_ok_en">OK</string>
    <string name="action_no_en">No</string>>
    <string name="msg_error_time_out">Connection timeout!</string>
    <string name="msg_error_no_internet">Not connect internet!</string>
    <string name="msg_error_data_parse">Parse data error!</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="settingss">Settings</string>
    <string name="ic_setting">ic_setting</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="text_user_name">Khanh le</string>
    <string name="aboult_me">Aboult me</string>
    <string name="hint_edt">Share something today...</string>
    <string name="BusinessName">this new business</string>
    <string name="BusinessType">Food &amp; Drinks</string>
    <string name="test_time">May 13, 2022 09:08 PM</string>
    <string name="_0">0</string>
    <string name="test_user_desc">Xin chao toi la khanh map den tu hiep duc</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="view">View</string>
    <string name="open">OPEN</string>
    <string name="follow">Follow</string>
    <string name="ratingScore">5.0</string>
    <string name="time">09:00 AM - 09: 00 PM</string>
    <string name="visits">472 Visits</string>
    <string name="chatNow">Chat Now</string>
    <string name="All">All</string>
    <string name="FoodAndDrinks">Food &amp; Drinks</string>
    <string name="BeautyAndSpas">Beauty &amp; Spas</string>
    <string name="ThingsToDo">Things to do</string>
    <string name="Services">Services</string>
    <string name="Shopping">Shopping</string>
    <string name="Education">Education</string>
    <string name="PlacesToStay">Places to stay</string>
    <string name="Repairs">Repairs</string>
    <string name="HomeAndGarden">Home &amp; Garden</string>
    <string name="Pets">Pets</string>
    <string name="Jobs">Jobs</string>
    <string name="RealEstate">Real Estate</string>
    <string name="HealthCare">Health Care</string>
</resources>