<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:background="@drawable/shape_border_bottom">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical0.050"
        style="@style/guideLineVertical"
        app:layout_constraintGuide_percent="0.050" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal0.60"
        style="@style/guideLineHorizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal0.70"
        style="@style/guideLineHorizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal0.91"
        style="@style/guideLineHorizontal"
        app:layout_constraintGuide_percent="0.91" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBottomSheetContentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:nestedScrollingEnabled="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@id/glVertical0.050"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_rv_image_list_bottom_sheet" />

    <TextView
        android:id="@+id/tvBusinessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BusinessName"
        android:textColor="@color/C_BF000000"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.60"
        app:layout_constraintStart_toStartOf="@+id/glVertical0.050"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.60" />


    <TextView
        android:id="@+id/tvRatingBarScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingScore"
        android:textColor="@color/C_F2D130"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.70"
        app:layout_constraintStart_toStartOf="@+id/glVertical0.050"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.70" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/CustomRatingBar"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_14"
        android:layout_marginStart="@dimen/dp_5"
        android:numStars="4"
        android:padding="@dimen/dp_2"
        android:rating="1.0"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.70"
        app:layout_constraintStart_toEndOf="@+id/tvRatingBarScore"
        app:layout_constraintTop_toBottomOf="@id/glHorizontal0.70" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/open"
        android:textColor="@color/green"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.70" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnDropDown"
        android:layout_width="@dimen/dp_18"
        android:layout_height="@dimen/dp_18"
        android:backgroundTint="@android:color/transparent"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.70"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.70"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_28"
        android:text="@string/time"
        android:textColor="@color/C_707070"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.70"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.70"
        app:layout_constraintEnd_toStartOf="@id/tvStatus" />

    <TextView
        android:id="@+id/tvBusinessType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BusinessType"
        android:textColor="@color/C_707070"
        android:textSize="@dimen/sp_9"
        app:layout_constraintStart_toStartOf="@id/glVertical0.050"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <TextView
        android:id="@+id/tvVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visits"
        android:textColor="@color/C_707070"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.91"
        app:layout_constraintStart_toStartOf="@id/glVertical0.050"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.91" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFollow"
        android:layout_width="@dimen/dp_18"
        android:layout_height="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_22"
        android:background="@drawable/layout_shape_circle_grey_button"
        android:padding="@dimen/dp_4"
        android:src="@drawable/ic_add_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.91"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.91" />


    <TextView
        android:id="@+id/tvFollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:text="@string/follow"
        android:textColor="@color/purple"
        android:textSize="@dimen/sp_11"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.91"
        app:layout_constraintStart_toEndOf="@id/ivFollow"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.91" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChatNow"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/layout_shape_main_gradient"
        android:drawableStart="@drawable/ic_chat"
        android:paddingHorizontal="@dimen/dp_5"
        android:text="@string/chatNow"
        android:textSize="@dimen/sp_11"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal0.91"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/glHorizontal0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>
